--- a/www/templates/ad/img.html
+++ b/www/templates/ad/img.html
@@ -3,7 +3,7 @@
         <single-title title="登录权限"></single-title>
     </ion-header-bar>
     <ion-content scroll="false">
-        <img src="./img/test/index.jpg" style="width: 100%;">
+        <img src="./img/test/index3.jpg" style="width: 100%;">
     </ion-content>
 </ion-view>
 
