--- a/www/templates/ad/login.html
+++ b/www/templates/ad/login.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
     <ion-header-bar align-title="center">
-        <single-title title="INHOUSE在线拉动系统"></single-title>
+        <single-title title="编组系统"></single-title>
     </ion-header-bar>
     <ion-content scroll="false">
         <div class="entryWp login-dashboard">
@@ -9,7 +9,7 @@
                     <div class="form-wpr">
                         <form ng-submit="login()" >
                             <table>
-                                <tr><td style="width: 5em;" class="tl">
+                                <tr><td style="width: 5em;" class="tl input-lable">
                                     <label>用户名</label>
                                 </td><td>
                                     <div class="field-wpr">
@@ -18,7 +18,7 @@
                                         </div>
                                     </div>
                                 </td></tr>
-                                <tr><td class="tl">
+                                <tr><td class="tl input-lable">
                                     <label>密码</label>
                                 </td><td>
                                     <div class="field-wpr">
