--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1565,6 +1565,7 @@ a.entry-home:hover {
 
 .xiajia.content-wrapper table td {
     padding: 2em 0.2em;
+    font-size: 1.2em;
 }
 
 .xiajia.content-wrapper table td.operation span a {
