--- a/www/templates/ad/ad-sub-permission.html
+++ b/www/templates/ad/ad-sub-permission.html
@@ -5,7 +5,7 @@
     <ion-content scroll="false">
         <div class="entryWp ad-sub-permission">
             <div>
-                <a href="#/dash" class="entry-home">
+                <a href="#/ad/xiajia" class="entry-home">
                     <div class="entry">
                         <div class="img tc">
                             <img src="img/ad/ad-permission-off.png" />
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#/view-board" class="entry-home">
+                <a href="#/ad/member" class="entry-home">
                     <div class="entry">
                         <div class="img tc">
                             <img src="img/ad/ad-permission-member.png" />
