--- a/www/templates/ad/img.html
+++ b/www/templates/ad/img.html
@@ -1,9 +1,6 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
-    <ion-header-bar align-title="center">
-        <single-title title="登录权限"></single-title>
-    </ion-header-bar>
     <ion-content scroll="false">
-        <img src="./img/test/index3.jpg" style="width: 100%;">
+        <img src="./img/test/off.jpg" style="width: 100%;">
     </ion-content>
 </ion-view>
 
