--- a/www/templates/ad/login.html
+++ b/www/templates/ad/login.html
@@ -14,7 +14,7 @@
                                 </td><td>
                                     <div class="field-wpr">
                                         <div class="input-wpr">
-                                            <input type="text" placeholder="请输入用户名" ng-model="params.identity">
+                                            <input type="text" placeholder="请输入用户名" ng-model="params.name">
                                         </div>
                                     </div>
                                 </td></tr>
@@ -23,13 +23,13 @@
                                 </td><td>
                                     <div class="field-wpr">
                                         <div class="input-wpr">
-                                            <input type="password" placeholder="请输入登录密码" ng-model="params.password">
+                                            <input type="password" placeholder="请输入登录密码" ng-model="params.pwd">
                                         </div>
                                     </div>
                                 </td></tr>
                                 <tr><td colspan="2">
                                     <div class="msg error" ng-if="errorMsg" ng-bind="errorMsg"></div>
-                                    <button type="submit" ng-disabled="!params.identity || !params.password" id="submit" class="btn btn-primary">登录</button>
+                                    <button type="submit" id="submit" class="btn btn-primary">登录</button>
                                 </td></tr>
                             </table>
                         </form>
