--- a/www/templates/ad/xiajia.html
+++ b/www/templates/ad/xiajia.html
@@ -23,10 +23,10 @@
             </tbody>
             <tbody ng-repeat="r in data">
                 <tr>
-                    <td ng-bind="r.id"></td>
-                    <td ng-bind="r.lineId"></td>
-                    <td ng-bind="r.recomKu"></td>
-                    <td ng-bind="r.recomBox"></td>
+                    <td ng-bind="r.itemCode"></td>
+                    <td ng-bind="r.routeCode"></td>
+                    <td ng-bind="r.locCode"></td>
+                    <td ng-bind="r.lp"></td>
                     <td ng-bind="r.groupArea"></td>
                     <td ng-bind="r.lastTime"></td>
                     <td class="operation">
