--- a/www/templates/ad/xiajia.html
+++ b/www/templates/ad/xiajia.html
@@ -31,7 +31,7 @@
                     <td ng-bind="r.lastTime"></td>
                     <td class="operation">
                         <span>下&nbsp;架</span>
-                        <a href="#/ad/kucun"><span>库&nbsp;存</span></a>
+                        <a ng-href="#/ad/kucun/{{r.itemCode}}"><span>库&nbsp;存</span></a>
                     </td>
                 </tr>
             </tbody>
