--- a/www/templates/ad/xiajia.html
+++ b/www/templates/ad/xiajia.html
@@ -39,7 +39,7 @@
         </div>
     </ion-content>
     <ion-footer-bar>
-        <div class="clear header six tc color-menu-type">
+        <!-- <div class="clear header six tc color-menu-type">
             <div class="twrapper">
                 <div class="type two clear">
                 <div class="name">编制</div>
@@ -58,11 +58,11 @@
                 <div class="name">日期</div>
                 <div class="value">&nbsp;<span ng-bind="metaData.bianzhi_date"></span></div>
             </div></div>
-        </div>
+        </div> -->
         <div class="quickNav">
             <a ng-click="loadList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a>
-            <a href="#/dash"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-            <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="#/ad/sub-permssion"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a href="#/ad/login"><span class="glyphicon glyphicon-home"></span></a>
             <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
         </div>
     </ion-footer-bar>
