--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1789,3 +1789,49 @@ a.entry-home:hover {
     padding: 1em;
     background: #FFF;
 }
+
+div.pull .bz-menu.active {
+    background: #159FDD;
+}
+
+div.pull .bz-menu {
+    padding: 1.5em;
+}
+
+div.pull .bz-menu .itemCode {
+    display: block;
+    color: #159EDC;
+}
+
+div.pull .bz-menu .routeCode {
+    color: #5B7B97;
+}
+
+div.pull .bz-menu.active .routeCode {
+    color: #FFF;
+}
+
+div.pull .bz-menu.active .itemCode {
+    color: #FFF;
+}
+
+div.pull .bz-menu .lsa {}
+
+div.pull .bz-menu .list.card {
+    background: #FFF;
+    border-color: #FFF;
+    font-size: 1.5em;
+}
+
+div.pull .bz-menu .list.card > div {
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+div.pull .bz-menu .list.card > div > div {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    height: 100%;
+}
