--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -1,11 +1,26 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
-  <ion-header-bar align-title="center">
+    <ion-header-bar align-title="center">
         <single-title title="线边拉动"></single-title>
     </ion-header-bar>
-    <ion-content class="bgFF" style="background: #FFF;bottom: 4em;" on-double-tap="goHome('kqhz')">
-        <div class="kqhz gwrx xiajia content-wrapper">
-        
+    <ion-content>
+        <div style="width: 100%; display: block; position: absolute; left: 0; top: 0.5em; bottom: 3.5em;width: 100%;">
+            <div class="clear pull" style="height: 100%; padding-top: 2em;">
+                <div ng-repeat="m in menus" class="bz-menu col-3">
+                    <a ng-click="goTo(m)">
+                        <div class="list card">
+                            <div>
+                                <div>
+                                    <span class="itemCode" ng-bind="m.itemCode"></span>
+                                    <span class="routeCode" ng-bind="m.routeCode"></span>
+                                    <span class="lsa" ng-bind="m.lsa"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
+        <div class="clear"></div>
     </ion-content>
     <ion-footer-bar>
         <!-- <div class="clear header six tc color-menu-type">
