--- a/www/templates/ad/start.html
+++ b/www/templates/ad/start.html
@@ -1,10 +1,10 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
     <ion-header-bar align-title="center">
-        <single-title title="线边拉动"></single-title>
+        <single-title title="线边上线"></single-title>
     </ion-header-bar>
     <ion-content>
         <div style="width: 100%; display: block; position: absolute; left: 0; top: 0.5em; bottom: 3.5em;width: 100%;">
-            <div class="clear pull" style="height: 100%; padding-top: 2em;">
+            <div class="clear pull start" style="height: 100%; padding-top: 2em;">
                 <div ng-repeat="m in menus" class="bz-menu col-3">
                     <a ng-click="goTo(m)">
                         <div class="list card">
@@ -23,7 +23,6 @@
         <div class="clear"></div>
     </ion-content>
     <ion-footer-bar>
-        <div class="pull-histroy"><button class="button button-light">拉动历史</button></div>
         <!-- <div class="clear header six tc color-menu-type">
             <div class="twrapper">
                 <div class="type two clear">
