--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -23,7 +23,7 @@
         <div class="clear"></div>
     </ion-content>
     <ion-footer-bar>
-        <div class="pull-histroy"><button class="button button-light">拉动历史</button></div>
+        <div class="pull-histroy"><button ng-click="goPullHistory()" class="button button-light">拉动历史</button></div>
         <!-- <div class="clear header six tc color-menu-type">
             <div class="twrapper">
                 <div class="type two clear">
