--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -7,8 +7,8 @@
             <div class="clear pull" style="height: 100%; padding-top: 2em;">
                 <p ng-if="errorMsg" ng-bind="errorMsg"></p>
                 <div ng-repeat="m in menus" class="bz-menu col-3">
-                    <a ng-click="goTo(m)">
-                        <div class="list card">
+                    <a ng-click="pull(m)">
+                        <div class="list card"  ng-class="{active: m.isPulling}">
                             <div>
                                 <div>
                                     <span class="itemCode" ng-bind="m.itemCode"></span>
