--- a/www/templates/ad/login-dashboard.html
+++ b/www/templates/ad/login-dashboard.html
@@ -7,7 +7,7 @@
     <ion-content scroll="false">
         <div class="entryWp ad-sub-permission login-dashboard">
             <div>
-            <a href="#/dash" class="entry-home">
+            <a href="#/entry" class="entry-home">
                 <div class="entry" style="left: 15%;">
                     <div class="img tc">
                         <img src="img/ad/login-sfm.png"/>
