--- a/www/templates/ad/xiajia.html
+++ b/www/templates/ad/xiajia.html
@@ -62,8 +62,8 @@
         <div class="quickNav">
             <a ng-click="loadList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a>
             <a href="#/ad/sub-permssion"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-            <a href="#/ad/login"><span class="glyphicon glyphicon-home"></span></a>
-            <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
+            <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
         </div>
     </ion-footer-bar>
 </ion-view>
