--- a/www/templates/ad/ad-sub-permission.html
+++ b/www/templates/ad/ad-sub-permission.html
@@ -19,4 +19,10 @@
             </div>
         </div>
     </ion-content>
+    <ion-footer-bar>
+        <div class="quickNav">
+            <a href="#/login-dashboard"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
+        </div>
+    </ion-footer-bar>
 </ion-view>
