--- a/www/templates/ad/member.html
+++ b/www/templates/ad/member.html
@@ -35,31 +35,12 @@
         </div>
     </ion-content>
     <ion-footer-bar>
-        <div class="clear header six tc color-menu-type">
-            <div class="twrapper">
-                <div class="type two clear">
-                <div class="name">编制</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.bianzhi"></span></div>
-            </div>
-            </div>
-            <div class="twrapper"><div class="type two clear">
-                <div class="name">审核</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.shenhe"></span></div>
-            </div></div>
-            <div class=" twrapper"><div class="type two clear">
-                <div class="name">批准</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.pizhun"></span></div>
-            </div></div>
-            <div class=" twrapper" style="width:20%"><div class="type two clear">
-                <div class="name">日期</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.bianzhi_date"></span></div>
-            </div></div>
-        </div>
         <div class="quickNav">
             <a ng-click="loadList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a>
-            <a href="#/dash"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-            <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-            <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
+            <a href="#/ad/sub-permssion"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
+
         </div>
     </ion-footer-bar>
 </ion-view>
