--- a/www/templates/ad/pull-hisotry.html
+++ b/www/templates/ad/pull-hisotry.html
@@ -1,36 +1,38 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
-  <ion-header-bar align-title="center">
+    <ion-header-bar align-title="center">
         <single-title title="拉动历史"></single-title>
     </ion-header-bar>
     <ion-content class="bgFF" style="background: #FFF;bottom: 4em;" on-double-tap="goHome('kqhz')">
         <div class="kqhz gwrx xiajia content-wrapper">
-        <table>
-            <thead>
-            <tr>
-                <th>零件号</th>
-                <th>线旁位置</th>
-                <th>线路号</th>
-                <th>DOLLY</th>
-                <th>拉动时间</th>
-                <th>拉动人</th>
-            </tr>
-            </thead>
-            <tbody ng-show="errorMsg!=''" >
-                <tr><td colspan="6">
-                    <span ng-bind="errorMsg" style="display: inline;">加载中</span>
-                </td></tr>
-            </tbody>
-            <tbody ng-repeat="r in menus">
-                <tr>
-                    <td ng-bind="r.itemCode"></td>
-                    <td ng-bind="r.lsa"></td>
-                    <td ng-bind="r.routeCode"></td>
-                    <td ng-bind="r.dolly"></td>
-                    <td ng-bind="r.pullTime"></td>
-                    <td ng-bind="r.pullOpreator"></td>
-                </tr>
-            </tbody>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th>零件号</th>
+                        <th>线旁位置</th>
+                        <th>线路号</th>
+                        <th>DOLLY</th>
+                        <th>拉动时间</th>
+                        <th>拉动人</th>
+                    </tr>
+                </thead>
+                <tbody ng-show="errorMsg!=''">
+                    <tr>
+                        <td colspan="6">
+                            <span ng-bind="errorMsg" style="display: inline;">加载中</span>
+                        </td>
+                    </tr>
+                </tbody>
+                <tbody ng-repeat="r in menus">
+                    <tr>
+                        <td ng-bind="r.itemCode"></td>
+                        <td ng-bind="r.lsa"></td>
+                        <td ng-bind="r.routeCode"></td>
+                        <td ng-bind="r.dolly"></td>
+                        <td ng-bind="r.pullTime"></td>
+                        <td ng-bind="r.pullOpreator"></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </ion-content>
     <ion-footer-bar>
@@ -57,8 +59,8 @@
         <div class="quickNav">
             <a ng-click="getList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a>
             <a href="#/ad/pull"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-            <a href="#/ad/sub-permssion"><span class="glyphicon glyphicon-home"></span></a>
-            <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
+            <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
         </div>
     </ion-footer-bar>
 </ion-view>
