--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -8,7 +8,7 @@
                 <p ng-if="errorMsg" ng-bind="errorMsg"></p>
                 <div ng-repeat="m in menus" class="bz-menu col-3">
                     <a ng-click="pull(m)">
-                        <div class="list card"  ng-class="{active: m.isPulling}">
+                        <div class="list card" ng-class="{active: m.isPulling}">
                             <div>
                                 <div>
                                     <span class="itemCode" ng-bind="m.itemCode"></span>
@@ -24,32 +24,14 @@
         <div class="clear"></div>
     </ion-content>
     <ion-footer-bar>
-        <div class="pull-histroy"><button ng-click="goPullHistory()" class="button button-light">拉动历史</button></div>
-        <!-- <div class="clear header six tc color-menu-type">
-            <div class="twrapper">
-                <div class="type two clear">
-                <div class="name">编制</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.bianzhi"></span></div>
-            </div>
-            </div>
-            <div class="twrapper"><div class="type two clear">
-                <div class="name">审核</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.shenhe"></span></div>
-            </div></div>
-            <div class=" twrapper"><div class="type two clear">
-                <div class="name">批准</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.pizhun"></span></div>
-            </div></div>
-            <div class=" twrapper" style="width:20%"><div class="type two clear">
-                <div class="name">日期</div>
-                <div class="value">&nbsp;<span ng-bind="metaData.bianzhi_date"></span></div>
-            </div></div>
-        </div> -->
+        <div class="pull-histroy">
+            <button ng-click="goPullHistory()" class="button button-light">拉动历史</button>
+        </div>
         <div class="quickNav">
-            <!-- <a ng-click="loadList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a> -->
+            <a ng-click="getList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a>
             <a href="#/ad/sub-permssion"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
             <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
-            <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
         </div>
     </ion-footer-bar>
 </ion-view>
