--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -47,4 +47,10 @@
 	        </a>
         </div>
     </ion-content>
+    <ion-footer-bar>
+        <div class="quickNav">
+            <a href="#/login-dashboard"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
+        </div>
+    </ion-footer-bar>
 </ion-view>
