--- a/www/templates/flow-view-wall.html
+++ b/www/templates/flow-view-wall.html
@@ -87,7 +87,7 @@
 		</div>
 		<div class="quickNav">
 			<a ng-click="historyBack()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-			<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+			<a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
 			<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 		</div>
 	</ion-footer-bar>
