--- a/www/templates/garden.html
+++ b/www/templates/garden.html
@@ -60,7 +60,7 @@
       <div style="width:100%;">
         <div class="quickNav" style="bottom: 0;">
           <a ng-href="{{isLine? '#/view-board' :'#/dash'}}"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-          <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+          <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
           <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
         </div>
       </div>
