--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -132,7 +132,7 @@
 		</div>
 		<div class="quickNav">
 			<a href="#/dash"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-			<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+			<a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
 			<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 		</div>
 		</div>
