--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -89,7 +89,7 @@
     <div class="clear"></div>
     <div class="quickNav">
         <a ng-click="historyBack()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-        <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+        <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
         <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
     </div>
   </ion-footer-bar>
