--- a/www/templates/line-kpi-group.html
+++ b/www/templates/line-kpi-group.html
@@ -37,7 +37,7 @@
 	    </div>
 		<div class="quickNav" style="bottom: 0;">
 			<a href="#/dash"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-			<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+			<a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
 			<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 		</div>
     </ion-content>
