--- a/www/templates/ad/login-dashboard.html
+++ b/www/templates/ad/login-dashboard.html
@@ -23,7 +23,7 @@
                         <img src="img/ad/login-ad.png"/>
                     </div>
                     <div class="group">
-                        <span class="number">AD Boadrd</span>
+                        <span class="number">AD Board</span>
                     </div>
                 </div>
             </a>
