--- a/www/templates/ad/xiajia.html
+++ b/www/templates/ad/xiajia.html
@@ -2,7 +2,7 @@
   <ion-header-bar align-title="center">
         <single-title title="零件下架"></single-title>
     </ion-header-bar>
-    <ion-content class="bgFF" style="background: #FFF;bottom: 4em;" on-double-tap="goHome('kqhz')">
+    <ion-content class="bgFF" style="background: #FFF;bottom: 4em;">
         <div class="kqhz gwrx xiajia content-wrapper">
         <table>
             <thead>
@@ -11,8 +11,8 @@
                 <th>线路号</th>
                 <th>推荐库位</th>
                 <th>推荐箱号</th>
-                <th>编组区域</th>
-                <th>最晚下架时间</th>
+                <th>拉动时间</th>
+                <th> 预计上线时间</th>
                 <th class="operation">操作</th>
             </tr>
             </thead>
@@ -27,8 +27,8 @@
                     <td ng-bind="r.routeCode"></td>
                     <td ng-bind="r.locCode"></td>
                     <td ng-bind="r.lp"></td>
-                    <td ng-bind="r.groupArea"></td>
-                    <td ng-bind="r.lastTime"></td>
+                    <td ng-bind="r.pullTime"></td>
+                    <td ng-bind="r.planOnlineTime"></td>
                     <td class="operation">
                         <span ng-bind="r.txt" ng-click="off(r)">下&nbsp;架</span>
                         <a ng-href="#/ad/kucun/{{r.itemCode}}"><span>库&nbsp;存</span></a>
