--- a/www/templates/ad/kucun.html
+++ b/www/templates/ad/kucun.html
@@ -23,13 +23,13 @@
             </tbody>
             <tbody ng-repeat="r in data">
                 <tr>
-                    <td ng-bind="r.id"></td>
-                    <td ng-bind="r.kuId"></td>
-                    <td ng-bind="r.boxId"></td>
-                    <td ng-bind="r.supplier"></td>
-                    <td ng-bind="r.amount"></td>
-                    <td ng-bind="r.shift"></td>
-                    <td ng-bind="r.time"></td>
+                    <td ng-bind="r.itemCode"></td>
+                    <td ng-bind="r.locCode"></td>
+                    <td ng-bind="r.lp"></td>
+                    <td ng-bind="r.supplierCode"></td>
+                    <td ng-bind="r.lot"></td>
+                    <td ng-bind="r.qty"></td>
+                    <td ng-bind="r.inTime"></td>
                 </tr>
             </tbody>
         </table>
