--- a/www/templates/ad/pull-hisotry.html
+++ b/www/templates/ad/pull-hisotry.html
@@ -15,7 +15,7 @@
                         <th>拉动人</th>
                     </tr>
                 </thead>
-                <tbody ng-show="errorMsg!=''">
+                <tbody ng-show="errorMsg">
                     <tr>
                         <td colspan="6">
                             <span ng-bind="errorMsg" style="display: inline;">加载中</span>
